# SUSolve

./: CMakeLists.txt  CTestConfig.cmake  README  quickBuild.sh
src/: import.cc  susolve.cc  susolve.ih
src/sudoku/: CMakeLists.txt  backtrackSolve.cc  constructor.cc  errors1.cc  errors2.cc  logicSolve.cc  operator.cc  solve.cc  sudoku.h  sudoku.ih
